--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           >regex Email (validation Email with regex) + beforeunload</a
         >
       </li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href="./leaf-pictures/leaf.html">leaf pictures</a></li>
+      <li><a href="./open-popup/popup.html">open popup at blur</a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
