--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       </li>
       <li><a href="./leaf-pictures/leaf.html">leaf pictures</a></li>
       <li><a href="./open-popup/popup.html">open popup at blur</a></li>
-      <li><a href=""></a></li>
+      <li>
+        <a href="./todo-list/todo.html">simple TODO list with template</a>
+      </li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
