add event delegation (tags)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <li>
         <a href="./todo-list/todo.html">simple TODO list with template</a>
       </li>
-      <li><a href=""></a></li>
+      <li>
+        <a href="./delegation/delegation.html">event delegation (tags)</a>
+      </li>
       <li><a href=""></a></li>
     </ul>
   </body>
