--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       <li>
         <a href="./delegation/delegation.html">event delegation (tags)</a>
       </li>
-      <li><a href=""></a></li>
+      <li>
+        <a href="./color-picker/color-picker.html"
+          >event delegation (color-picker)</a
+        >
+      </li>
     </ul>
   </body>
 </html>
