--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
           >event delegation (color-picker)</a
         >
       </li>
+      <li>
+        <a href="./maze/maze.html"
+          >event delegation + mouseleave + mouseover (maze)</a
+        >
+      </li>
+      <li>
+        <a href="./paint-block/paint.html">event ... (to paint the block)</a>
+      </li>
     </ul>
   </body>
 </html>
