add painted block

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         >
       </li>
       <li>
-        <a href="./paint-block/paint.html">event ... (to paint the block)</a>
+        <a href="./paint-block/paint.html"
+          >mouseover + mouseout (to paint the block)</a
+        >
       </li>
     </ul>
   </body>
