--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           >mouseover + mouseout (to paint the block)</a
         >
       </li>
+      <li>
+        <a href="./accordion/accordion.html">accordion</a>
+      </li>
     </ul>
   </body>
 </html>
