--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       <li>
         <a href="./accordion/accordion.html">accordion</a>
       </li>
+      <li>
+        <a href="./throttle-debounce/throttle-debounce.html"
+          >my own throttle and debounce</a
+        >
+      </li>
     </ul>
   </body>
 </html>
