--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           >my own throttle and debounce</a
         >
       </li>
+      <li>
+        <a href="./filter/filter.html">filter(search)</a>
+      </li>
     </ul>
   </body>
 </html>
