add lazy loading

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <li>
         <a href="./filter/filter.html">filter(search)</a>
       </li>
+      <li>
+        <a href="./lazy-loading/lazy.html">lazy loading(load event)</a>
+      </li>
     </ul>
   </body>
 </html>
