--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
       <li>
         <a href="./lazy-loading/lazy.html">lazy loading(load event)</a>
       </li>
+      <li>
+        <a href="./lazysizes/lazysizes.html">lazysizes library</a>
+      </li>
     </ul>
   </body>
 </html>
