--- a/lazysizes/lazysizes.html
+++ b/lazysizes/lazysizes.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>lazyload</title>
-    <link rel="stylesheet" href="./lazy.css" />
+    <title>lazysizes</title>
+    <link rel="stylesheet" href="./lazysizes.css" />
+    <style></style>
   </head>
   <body>
     <a href="../index.html" class="return">Return</a>
@@ -14,7 +15,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/avocado-cooked-delicious-dish-262959.jpg"
+          class="lazyload"
+          data-src="./images/avocado-cooked-delicious-dish-262959.jpg"
           alt="avocado-cooked-delicious-dish"
           width="640"
           height="480"
@@ -36,7 +38,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114.jpg"
+          class="lazyload"
+          data-src="./images/black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114.jpg"
           alt="black-frying-pan-with-spaghetti-sauce-near-brown-wooden"
           width="640"
           height="480"
@@ -58,7 +61,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/blueberries-cake-chocolate-chocolate-cake-291528.jpg"
+          class="lazyload"
+          data-src="./images/blueberries-cake-chocolate-chocolate-cake-291528.jpg"
           alt="blueberries-cake-chocolate-chocolate-cake"
           width="640"
           height="480"
@@ -80,7 +84,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/blur-breakfast-close-up-dairy-product-376464.jpg"
+          class="lazyload"
+          data-src="./images/blur-breakfast-close-up-dairy-product-376464.jpg"
           alt="blur-breakfast-close-up-dairy-product"
           width="640"
           height="480"
@@ -102,7 +107,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/flat-lay-photography-of-vegetable-salad-on-plate-1640777.jpg"
+          class="lazyload"
+          data-src="./images/flat-lay-photography-of-vegetable-salad-on-plate-1640777.jpg"
           alt="flat-lay-photography-of-vegetable-salad-on-plate"
           width="640"
           height="480"
@@ -124,7 +130,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/food-dinner-lunch-unhealthy-70497.jpg"
+          class="lazyload"
+          data-src="./images/food-dinner-lunch-unhealthy-70497.jpg"
           alt="food-dinner-lunch-unhealthy"
           width="640"
           height="480"
@@ -146,7 +153,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/food-plate-chocolate-dessert-132694.jpg"
+          class="lazyload"
+          data-src="./images/food-plate-chocolate-dessert-132694.jpg"
           alt="food-plate-chocolate-dessert"
           width="640"
           height="480"
@@ -168,7 +176,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/selective-focus-photography-of-beef-steak-with-sauce-675951.jpg"
+          class="lazyload"
+          data-src="./images/selective-focus-photography-of-beef-steak-with-sauce-675951.jpg"
           alt="beef-steak-with-sauce"
           width="640"
           height="480"
@@ -190,7 +199,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/selective-focus-photography-of-pasta-with-tomato-and-basil-1279330.jpg"
+          class="lazyload"
+          data-src="./images/selective-focus-photography-of-pasta-with-tomato-and-basil-1279330.jpg"
           alt="pasta-with-tomato-and-basil"
           width="640"
           height="480"
@@ -212,7 +222,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/sliced-vegetable-and-cooked-food-on-white-ceramic-plate-1234535.jpg"
+          class="lazyload"
+          data-src="./images/sliced-vegetable-and-cooked-food-on-white-ceramic-plate-1234535.jpg"
           alt="sliced-vegetable-and-cooked-food-on-white-ceramic-plate"
           width="640"
           height="480"
@@ -234,7 +245,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/steak-food-769289.jpg"
+          class="lazyload"
+          data-src="./images/steak-food-769289.jpg"
           alt="steak-food"
           width="640"
           height="480"
@@ -256,7 +268,8 @@
       <li class="feed__item">
         <img
           loading="lazy"
-          src="./images/top-view-photo-of-food-dessert-1099680.jpg"
+          class="lazyload"
+          data-src="./images/top-view-photo-of-food-dessert-1099680.jpg"
           alt="top-view-photo-of-food-dessert"
           width="640"
           height="480"
@@ -276,7 +289,6 @@
         </p>
       </li>
     </ul>
-
-    <script src="./lazy.js" type="module"></script>
+    <script src="./lazysizes.js" type="module"></script>
   </body>
 </html>
