add infinity scroll elementary

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
       <li>
         <a href="./lazysizes/lazysizes.html">lazysizes library</a>
       </li>
+      <li>
+        <a href="./inf-scroll-elementary/inf.html"
+          >infinity scroll elementary</a
+        >
+      </li>
     </ul>
   </body>
 </html>
