add filter countries

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           >infinity scroll elementary</a
         >
       </li>
+      <li>
+        <a href="./filter-countries/filter-countries.html">filter countries</a>
+      </li>
     </ul>
   </body>
 </html>
