add infinity scroll with intersectionObserver

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
       <li>
         <a href="./filter-countries/filter-countries.html">filter countries</a>
       </li>
+      <li>
+        <a href="./inf-scroll-intersectionObserver/inf.html"
+          >infinity scroll with intersectionObserver</a
+        >
+      </li>
     </ul>
   </body>
 </html>
