add lazy loading for images (intersectionObserver)

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <a href="./filter-countries/filter-countries.html">filter countries</a>
       </li>
       <li>
-        <a href="./inf-scroll-intersectionObserver/inf.html"
-          >infinity scroll with intersectionObserver</a
+        <a href="./lazy-loading-for-images/lazy-images.html"
+          >lazy-loading for imafes with intersectionObswrver</a
         >
       </li>
     </ul>
