--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </li>
       <li>
         <a href="./lazy-loading-for-images/lazy-images.html"
-          >lazy-loading for imafes with intersectionObswrver</a
+          >lazy-loading for images with intersectionObserver</a
         >
       </li>
     </ul>
